update: task (todo)

--- a/sinatra/Gemfile
+++ b/sinatra/Gemfile
@@ -2,10 +2,11 @@
 
 source "https://rubygems.org"
 
-git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
+git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
-gem "sinatra"
-gem "byebug"
-gem "puma"
-gem "sinatra-contrib"
-gem "pg"
+# gem "rails"
+gem 'sinatra'
+gem 'pg'
+gem 'byebug'
+gem 'sinatra-contrib'
+gem 'puma'
