--- a/react/todolist/package.json
+++ b/react/todolist/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-act": "^1.8.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lockr": "^0.8.6",
     "@types/lodash": "^4.14.168",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
